# pupperv3_mujoco_sim

./: CMakeLists.txt  README.md  package.xml
launch/: fixed_base_launch.py  fixed_base_mjx_compat_launch.py  floating_base_launch.py  floating_base_mjx_compat_launch.py  test_hw_interface.launch.py
lib/: mujoco_core_interactive.hpp  mujoco_hardware_interface.cpp  mujoco_hardware_interface.hpp  mujoco_interactive_node.cpp  mujoco_interactive_node.hpp
src/: mujoco_interactive_test.cpp
src/meshes/dae/: pupperv3_export.001.dae  pupperv3_export.002.dae  pupperv3_export.003.dae  pupperv3_export.004.dae  pupperv3_export.005.dae  pupperv3_export.006.dae  pupperv3_export.007.dae  pupperv3_export.008.dae  pupperv3_export.009.dae  pupperv3_export.010.dae  pupperv3_export.011.dae  pupperv3_export.012.dae
src/urdf/: assets.xml  compiler_settings.xml  defaults.xml  defaults_mjx.xml  pupper_v3_2.urdf  pupper_v3_2.xml  pupper_v3_2_fixed_base.xml  pupper_v3_2_fixed_base_mjx_compat.xml  pupper_v3_2_floating_base.xml  pupper_v3_2_floating_base_mjx_compat.xml  pupper_v3_2_mjx_compat.xml  segway.xml  sensors.xml
